Convert QuestObjective to Codec