@@ -3,9 +3,6 @@ package com.chaosbuffalo.mknpc.quest.objectives;
 import com.chaosbuffalo.mkcore.MKCoreRegistry;
 import com.chaosbuffalo.mkcore.abilities.MKAbility;
 import com.chaosbuffalo.mkcore.core.damage.MKDamageSource;
-import com.chaosbuffalo.mkcore.serialization.attributes.IntAttribute;
-import com.chaosbuffalo.mkcore.serialization.attributes.RegistryEntryAttribute;
-import com.chaosbuffalo.mknpc.MKNpc;
 import com.chaosbuffalo.mknpc.capabilities.IWorldNpcData;
 import com.chaosbuffalo.mknpc.npc.MKStructureEntry;
 import com.chaosbuffalo.mknpc.npc.NpcDefinition;
@@ -13,32 +10,41 @@ import com.chaosbuffalo.mknpc.quest.data.QuestData;
 import com.chaosbuffalo.mknpc.quest.data.objective.EmptyInstanceData;
 import com.chaosbuffalo.mknpc.quest.data.player.PlayerQuestChainInstance;
 import com.chaosbuffalo.mknpc.quest.data.player.PlayerQuestObjectiveData;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.ChatFormatting;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.ExtraCodecs;
 import net.minecraft.world.entity.player.Player;
 import net.minecraftforge.event.entity.living.LivingDeathEvent;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 public class KillWithAbilityObjective extends QuestObjective<EmptyInstanceData> implements IKillObjectiveHandler {
-    public static final ResourceLocation NAME = new ResourceLocation(MKNpc.MODID, "objective.kill_w_ability");
-    protected RegistryEntryAttribute<MKAbility> ability = new RegistryEntryAttribute<>("ability", MKCoreRegistry.ABILITIES, MKCoreRegistry.INVALID_ABILITY);
-    protected IntAttribute count = new IntAttribute("count", 1);
+    public static final Codec<KillWithAbilityObjective> CODEC = ExtraCodecs.lazyInitializedCodec(() ->
+            RecordCodecBuilder.<KillWithAbilityObjective>mapCodec(builder -> {
+                return builder.group(
+                        Codec.STRING.fieldOf("objectiveName").forGetter(i -> i.objectiveName),
+                        MKCoreRegistry.ABILITIES.getCodec().fieldOf("ability").forGetter(i -> i.ability),
+                        Codec.INT.fieldOf("count").forGetter(i -> i.requiredCount)
+                ).apply(builder, KillWithAbilityObjective::new);
+            }).codec());
+
+    private final MKAbility ability;
+    private final int requiredCount;
 
     public KillWithAbilityObjective(String name, MKAbility ability, int count) {
-        super(NAME, name, defaultDescription);
-        this.ability.setValue(ability.getAbilityId());
-        this.count.setValue(count);
-        addAttributes(this.ability, this.count);
+        super(name);
+        this.ability = ability;
+        requiredCount = count;
     }
 
-    public KillWithAbilityObjective() {
-        super(NAME, "invalid", defaultDescription);
-        addAttributes(this.ability, this.count);
+    @Override
+    public QuestObjectiveType<? extends QuestObjective<?>> getType() {
+        return QuestObjectiveTypes.KILL_WITH_ABILITY.get();
     }
 
     @Override
@@ -52,26 +58,17 @@ public class KillWithAbilityObjective extends QuestObjective<EmptyInstanceData> 
     }
 
     @Override
-    public PlayerQuestObjectiveData playerDataFactory() {
-        return new PlayerQuestObjectiveData(getObjectiveName(), getDescription());
-    }
-
-    @Override
-    public List<MutableComponent> getDescription() {
-        return Collections.singletonList(getDescriptionWithKillCount(0));
+    public List<Component> getDescription() {
+        return List.of(getDescriptionWithKillCount(0));
     }
 
     private MutableComponent getDescriptionWithKillCount(int count) {
-        return this.ability.resolve().map(
-                        x -> Component.translatable("mknpc.objective.kill_w_ability.desc", x.getAbilityName(),
-                                count, this.count.value()))
-                .orElse(Component.translatable("mknpc.objective.kill_w_ability.desc",
-                        Component.literal("Ability Not Found"), count, this.count.value()));
+        return Component.translatable("mknpc.objective.kill_w_ability.desc", ability.getAbilityName(), count, requiredCount);
     }
 
     @Override
     public PlayerQuestObjectiveData generatePlayerData(IWorldNpcData worldData, QuestData questData) {
-        PlayerQuestObjectiveData newObj = playerDataFactory();
+        PlayerQuestObjectiveData newObj = new PlayerQuestObjectiveData(getObjectiveName(), getDescription());
         newObj.putInt("killCount", 0);
         return newObj;
     }
@@ -80,13 +77,13 @@ public class KillWithAbilityObjective extends QuestObjective<EmptyInstanceData> 
     public boolean onPlayerKillNpcDefEntity(Player player, PlayerQuestObjectiveData objectiveData, NpcDefinition def,
                                             LivingDeathEvent event, QuestData questData, PlayerQuestChainInstance playerChain) {
         if (event.getSource() instanceof MKDamageSource.AbilityDamage src && !isComplete(objectiveData)) {
-            int currentCount = objectiveData.getInt("killCount");
-            if (src.getAbilityId() != null && src.getAbilityId().equals(ability.getValue())) {
+            if (src.getAbilityId() != null && src.getAbilityId().equals(ability.getAbilityId())) {
+                int currentCount = objectiveData.getInt("killCount");
                 currentCount++;
                 objectiveData.putInt("killCount", currentCount);
                 objectiveData.setDescription(getDescriptionWithKillCount(currentCount));
                 player.sendSystemMessage(getDescriptionWithKillCount(currentCount).withStyle(ChatFormatting.GOLD));
-                if (currentCount == count.value()) {
+                if (currentCount == requiredCount) {
                     signalCompleted(objectiveData);
                 }
                 playerChain.notifyDirty();
